--- a/oauth/authorize.html
+++ b/oauth/authorize.html
@@ -83,6 +83,7 @@
       <input type="hidden" name="client_id"/>
       <input type="hidden" name="redirect_uri"/>
       <input type="hidden" name="state"/>
+      <input type="hidden" name="scope"/>
       <button type="submit">Login</button>
     </div>
   </form>
