--- a/oauth/authorize.html
+++ b/oauth/authorize.html
@@ -22,11 +22,22 @@
             padding-top: 60px;
         }
 
+        #client {
+            text-align: center;
+            margin: 24px 0 12px 0;
+            position: relative;
+        }
+
+        #client img {
+            width: 40%;
+        }
+
         #content {
             background-color: #fefefe;
             margin: 5% auto 15% auto;
             border: 1px solid #888;
-            width: 300px;
+            width: 90%;
+            max-width: 320px;
             -webkit-animation: animatezoom 0.6s;
             animation: animatezoom 0.6s;
         }
@@ -74,6 +85,9 @@
 
 <div id="wrapper">
   <form id="content" action="/oauth/login" method="post">
+    <div id="client">
+        <img src="https://www.softwaregroup.com/ResourcePackages/Talon/assets/dist/images/logo.png" alt="Client">
+    </div>
     <div id="container">
       <label for="username"><b>Username</b></label>
       <input type="text" placeholder="Enter username" name="username" required>
